# elec1601

./: CMakeLists.txt  README.md  robot.c  run.sh  structures.h
include/: path_track.h  robot.h  structures.h  wall.h
lib/: structures.h
maze/: basic.txt  complex.txt  escape_before_close.md  escape_before_close.txt  original.txt
src/: main.c  path_track.c  robot.c  wall.c
src_clone/: main.c  path_track.c  robot.c  wall.c
